--- a/dictionary-frontend/src/languages/en.json
+++ b/dictionary-frontend/src/languages/en.json
@@ -4,6 +4,11 @@
     "searchButton": "Search",
     "viewOnGitHub": "View on GitHub",
     "all": "All",
-    "monolingual": "J-J",
-    "bilingual": "J-E"
+    "jj": "J-J",
+    "je": "J-E",
+    "ej": "E-J",
+    "allDescription": "Search All Dictionaries",
+    "jjDescription": "Japanese to Japanese Only",
+    "jeDescription": "Japanese to English Only",
+    "ejDescription": "English to Japanese Only"
 }
