--- a/dictionary-frontend/src/languages/jp.json
+++ b/dictionary-frontend/src/languages/jp.json
@@ -4,6 +4,11 @@
     "searchButton": "検索",
     "viewOnGitHub": "GitHubで見る",
     "all": "全て",
-    "monolingual": "国語",
-    "bilingual": "和英"
+    "jj": "国語",
+    "je": "和英",
+    "ej": "英和",
+    "allDescription": "全て検索",
+    "jjDescription": "国語辞典のみ",
+    "jeDescription": "和英辞典のみ",
+    "ejDescription": "英和辞典のみ"
 }
