Implemented cards to present dictionaries. Implemented two languages.

--- a/dictionary-frontend/src/languages/jp.json
+++ b/dictionary-frontend/src/languages/jp.json
@@ -10,5 +10,9 @@
     "allDescription": "全て検索",
     "jjDescription": "国語辞典のみ",
     "jeDescription": "和英辞典のみ",
-    "ejDescription": "英和辞典のみ"
+    "ejDescription": "英和辞典のみ",
+    "kellygemmill": "ゲミル・ケリー",
+    "home": "ホーム",
+    "projects": "プロジェクト",
+    "github": "GitHub"
 }
