Updating projects dropdown in nav bar

--- a/dictionary-frontend/src/languages/en.json
+++ b/dictionary-frontend/src/languages/en.json
@@ -14,5 +14,7 @@
     "kellygemmill": "Kelly Gemmill",
     "home": "Home",
     "projects": "Projects",
-    "github": "GitHub"
+    "github": "GitHub",
+    "sudoku": "Sudoku Solver",
+    "dictionary": "Dictionary"
 }
