--- a/dictionary-frontend/src/languages/jp.json
+++ b/dictionary-frontend/src/languages/jp.json
@@ -3,10 +3,10 @@
     "searchDescription": "調べたい言葉を入力",
     "searchButton": "検索",
     "viewOnGitHub": "GitHubで見る",
-    "all": "全て",
-    "jj": "国語",
-    "je": "和英",
-    "ej": "英和",
+    "ALL": "全て",
+    "JtoJ": "国語",
+    "JtoE": "和英",
+    "EtoJ": "英和",
     "allDescription": "全て検索",
     "jjDescription": "国語辞典のみ",
     "jeDescription": "和英辞典のみ",
