Added demo mode to generate a random word to search

--- a/dictionary-frontend/src/languages/en.json
+++ b/dictionary-frontend/src/languages/en.json
@@ -1,6 +1,7 @@
 {
     "pageTitle": "Dictionary",
-    "searchDescription": "Enter search term",
+    "translationDescription": "Japanese ⇨ Japanese  |  Japanese ⇨ English",
+    "searchDescription": "Enter Japanese search term",
     "searchButton": "Search",
     "viewOnGitHub": "View on GitHub",
     "ALL": "All",
