--- a/dictionary-frontend/src/languages/jp.json
+++ b/dictionary-frontend/src/languages/jp.json
@@ -1,5 +1,6 @@
 {
     "pageTitle": "辞書",
+    "translationDescription": "日本語　⇨　日本語　｜　日本語　⇨　英語",
     "searchDescription": "調べたい言葉を入力",
     "searchButton": "検索",
     "viewOnGitHub": "GitHubで見る",
