--- a/dictionary-frontend/src/languages/jp.json
+++ b/dictionary-frontend/src/languages/jp.json
@@ -1,7 +1,5 @@
 {
     "pageTitle": "辞書",
-    "jArrowJ": "日本語　⇨　日本語",
-    "jArrowE": "日本語　⇨　英語",
     "searchDescription": "調べたい言葉を入力",
     "searchButton": "検索",
     "viewOnGitHub": "GitHubで見る",
@@ -18,5 +16,7 @@
     "projects": "プロジェクト",
     "github": "GitHub",
     "sudoku": "数独ソルバー",
-    "dictionary": "辞書"
+    "dictionary": "辞書",
+    "contact": "お問い合わせ",
+    "summary": "全てを表示"
 }
